# CMake-Projesi

./: CMakeLists.txt  README.md
ProjectFolder/: CMakeLists.txt
ProjectFolder/Student/: student.cpp  student.h
ProjectFolder/src/: main.cpp
Student/: CMakeLists.txt
src/: main.cpp
